logs/django-easy-news.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_easy_news-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/easy_news'...
Listing './lib/python3.5/site-packages/easy_news/doc'...
Listing './lib/python3.5/site-packages/easy_news/doc/build'...
Listing './lib/python3.5/site-packages/easy_news/doc/build/.doctrees'...
Listing './lib/python3.5/site-packages/easy_news/doc/build/_sources'...
Listing './lib/python3.5/site-packages/easy_news/doc/build/_static'...
Listing './lib/python3.5/site-packages/easy_news/doc/source'...
Compiling './lib/python3.5/site-packages/easy_news/doc/source/conf.py'...
***   File "./lib/python3.5/site-packages/easy_news/doc/source/conf.py", line 171
    ('index', 'django-ordinary-news.tex', ur'django-ordinary-news Documentation',
                                                                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/easy_news/locale'...
Listing './lib/python3.5/site-packages/easy_news/locale/ru'...
Listing './lib/python3.5/site-packages/easy_news/locale/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/easy_news/migrations'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup/fixtures'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup/fixtures/project_data'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup/templates'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup/templates/easy_news'...
Listing './lib/python3.5/site-packages/easy_news/redsolution_setup/templates/easy_news/redsolutioncms'...
Listing './lib/python3.5/site-packages/easy_news/templates'...
Listing './lib/python3.5/site-packages/easy_news/templates/easy_news'...
Listing './lib/python3.5/site-packages/easy_news/templatetags'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
